--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve --port 4300",
+        "start": "node server.js",
+        "start:local": "ng serve --port 4300",
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
