--- a/projects/angularstudio-clr-login/package.json
+++ b/projects/angularstudio-clr-login/package.json
@@ -6,6 +6,7 @@
         "@angular/core": "^11.2.9",
         "@clr/core": "^4.0.12",
         "@clr/ui": "^5.1.1",
-        "tslib": "^2.0.0"
+        "tslib": "^2.0.0",
+        "@auth0/angular-jwt": "^5.0.2"
     }
 }
