--- a/projects/clr-form/package.json
+++ b/projects/clr-form/package.json
@@ -1,10 +1,9 @@
 {
     "name": "@angular.studio/clr-form",
-    "version": "0.0.14",
+    "version": "0.0.15",
     "peerDependencies": {
         "@angular/common": "^11.2.9",
         "@angular/core": "^11.2.9",
-        "tslib": "^2.0.0",
-        "@angular-slider/ngx-slider": "^2.0.3"
+        "tslib": "^2.0.0"
     }
 }
