--- a/projects/angularstudio-clr-login/package.json
+++ b/projects/angularstudio-clr-login/package.json
@@ -1,12 +1,12 @@
 {
     "name": "@angular.studio/clr-login",
-    "version": "0.0.13",
+    "version": "0.0.14",
     "peerDependencies": {
         "@angular/common": "^11.2.9",
         "@angular/core": "^11.2.9",
+        "@auth0/angular-jwt": "^5.0.2",
         "@clr/core": "^4.0.12",
-        "@clr/ui": "^5.1.1",
-        "@auth0/angular-jwt": "^5.0.2"
+        "@clr/ui": "^5.1.1"
     },
     "dependencies": {
         "tslib": "^2.0.0"
