--- a/projects/angularstudio-change-password/package.json
+++ b/projects/angularstudio-change-password/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "angularstudio-change-password",
-  "version": "0.0.1",
-  "peerDependencies": {
-    "@angular/common": "^11.2.13",
-    "@angular/core": "^11.2.13"
-  },
-  "dependencies": {
-    "tslib": "^2.0.0"
-  }
+    "name": "@angular.studio/change-password",
+    "version": "0.0.2",
+    "peerDependencies": {
+        "@angular/common": "^11.2.13",
+        "@angular/core": "^11.2.13"
+    },
+    "dependencies": {
+        "tslib": "^2.0.0"
+    }
 }
